--- a/cliente/src/componentes/conocenos/conocenos.css
+++ b/cliente/src/componentes/conocenos/conocenos.css
@@ -1,26 +1,48 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 98.60vw;
+    background-color: none;
 }
 
-.caja1 {
+.grid {
+    min-height: 100vh;
+    grid-template-columns: 1fr 1fr; /* Cambiado de auto auto a 1fr 1fr */
+    grid-template-rows: 10% auto auto auto 10%;
+    background-color: black;
+}
+
+.grid1{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+
+.grid2 {
+    grid-column: 1/3;
+    grid-row: 2/3;
     background-image: linear-gradient(rgba(128, 15, 15, 0.288), rgba(128, 15, 15, 0.288)), url('https://th.bing.com/th/id/R.9165abb488f2933905bb31eed94d3d1d?rik=PCqOdl3M9Y%2bJAA&pid=ImgRaw&r=0');
     background-repeat: no-repeat;
     background-size: cover;
     padding: 25px;
-    width: 100%;
-    height: auto;
     display: flex;
     flex-direction: column;
-    font-size: 20px;
     color: #ffffff;
     justify-content: center;
     align-items: center;
 }
 
-.caja1 h2 {
+.li{
+    font-size: 20px;
+}
+
+.grid2 h2 {
     font-weight: bold;
     color: #ad0305;
     text-shadow: 2px 0px 0px white,
@@ -31,81 +53,180 @@ body {
     text-align: center;
 }
 
-.caja1 h4 {
-
+.grid2 h4 {
     max-width: 1500px;
     text-align: center;
     text-align: center;
     font-size:25px ;
 }
 
-.contenedorMVI {
-    background-color: #D3D3D3;
-    width: 100%;
-    height: auto;
+.grid3{
+    grid-column: 1/2;
+    grid-row: 3/4;
     padding: 25px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-around;
-    align-items: center;
-    background-color:  #000000;
-    
+    flex-wrap: wrap;
 }
 
-.contenedorMVI h2 {
+.uno{
     display: flex;
-    justify-content: center;
-    text-align: justify;
-    color: #ad0305;
-    font-weight: bold;
+    flex-direction: column;
 }
 
-.contenedorMVI h3 {
+.grid3 h2 {
+    font-weight: bold;
+    color: #ad0305;
+    text-shadow: 2px 0px 0px white, 0px 2px 0px white, -2px 0px 0px white, 0px -2px 0px white;
+    font-size: 35px;
+    text-align: center;
+}
+
+.grid3 h3 {
     display: flex;
     justify-content: center;
     text-align: center;
     max-width: 750px;
-    font-size: 30px;
+    font-size: 25px;
+    color: white;
+    text-align: justify;
+    
+}
+
+.imagen_mision{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 320px;
+}
+
+
+.grid4{
+    grid-column: 1/2;
+    grid-row: 4/5;
+    padding: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.grid4 h2 {
+    font-weight: bold;
+    color: #ad0305;
+    text-shadow: 2px 0px 0px white, 0px 2px 0px white, -2px 0px 0px white, 0px -2px 0px white;
+    font-size: 35px;
+    text-align: center;
+}
+
+.grid4 h3 { max-width: none;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 25px;
     color: white;
     text-align: justify;
 }
 
-.contenedorMVI img {
-    border-radius: 3pc;
-    width: 25w;
-    height: 20vw;
-    vertical-align: middle;
-}
-.izquierda{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between; 
-    align-items: center;
-    height: auto;
-    width: 70%;
-    margin-top: 100px;
-    gap: 85px;
-}
 
-.derecha{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    margin-top: 100px;
-    align-items: center;
-    height: auto;
-    width: 70%;
-    margin-bottom: 100px;
-    gap: 85px;
-}
 
 footer {
-    width: 100%;
-    height: 100px;
+    grid-column: 1/3;
+    grid-row: 5/6;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #ffffff;
     background-color: #161A1D;
     border-top: 1px solid #B1A7A6;
+    padding: 40px;
 }
+
+@media screen and (max-width:1200px) {
+    .grid2 h4 {
+        text-align: center;
+        text-align: center;
+        font-size:20px ;
+        padding: 20px 40px;
+       
+    }
+
+    .grid3 h3 {
+        max-width: none;
+        text-align: center;
+        text-align: center;
+        font-size:20px ;
+        padding: 20px 40px;
+    }
+
+    .grid4 h3{
+        font-size: 20px;
+        padding: 20px 40px;
+    }
+
+    .imagen_mision{
+        display: none;
+    }
+
+    .grid4{
+        background-image: linear-gradient(rgba(128, 15, 15, 0.288), rgba(128, 15, 15, 0.288)), url('https://storage.lacapitalmdp.com/2019/02/DECARNESOMOS06-1024x683.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+
+
+    
+}
+
+@media screen and (max-width:620px) {
+
+
+    .grid1{
+        height: 100px;
+    }
+
+    .li{
+        font-size: 20px;
+    }
+    
+}
+
+@media screen and (max-width:780px) {
+    .logo{
+        display: none;
+    }
+
+    .grid1{
+        height: 100px;
+    }
+     
+}
+
+@media screen and (max-width:550px) {
+    .grid1{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid gray;
+        height: 100px;
+    }
+
+    .activa{
+        display: none;
+    }
+    
+}
+
+@media screen and (max-width:460px) {
+    .activa{
+        display: none;
+    }
+    .grid1{
+        height: 100px;
+    }
+    
+}
+
