--- a/cliente/src/componentes/inicio/inicio.css
+++ b/cliente/src/componentes/inicio/inicio.css
@@ -34,6 +34,7 @@ body {
 
 nav {
     position: sticky;
+    z-index: 1;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -59,6 +60,7 @@ nav a {
 }
 
 .activa {
+    font-size: 20px;
     border-top: 6px solid #e5383b;
     padding: 2px;
 }
@@ -74,9 +76,8 @@ nav li {
     grid-column: 1/2;
     grid-row: 2/3;
     height: 100%;
-    background-image: url("https://cdn.shopify.com/s/files/1/0086/1064/4028/products/PRIME_NYStrip9-1200x1200-Raw_JUL19_1200x1200.jpg?v=1563808017");
+    background-image: linear-gradient(rgba(128, 15, 15, 0.288), rgba(128, 15, 15, 0.288)), url('https://cdn.shopify.com/s/files/1/0086/1064/4028/products/PRIME_NYStrip9-1200x1200-Raw_JUL19_1200x1200.jpg?v=1563808017');
     background-size: cover;
-    filter: contrast(50%);
     background-repeat: no-repeat;
     background-position: center;
     
@@ -452,7 +453,9 @@ footer img {
     .li{
         font-size: 15px;
     }
- 
+ .logo{
+        display: none;
+    }
 }
 
 @media screen and (max-width:660px) {
@@ -465,25 +468,16 @@ footer img {
     }
 
     .activa{
-        font-size: 12px;
-    }
+        font-size: 20px;
+    }   
 
-    .logo{
-        width: 110px;
-        height: 110px;
+    .calidad{
+        font-size: 40px;
     }
-    
 }
 
 @media screen and (max-width:610px) {
-    .logo{
-        display: none;
-    }
-    .menu {
-        width: 100vw;
-        display: inline;
-        align-items: center;
-    }
+
 
     .inform{
         width: 100%;
@@ -503,18 +497,14 @@ footer img {
 }
 
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:510px) {
     .logo{
         display: none;
     }
 
     .menu{
-        width: 100vw;
-        display: inline;
-        height: 100px;
+        border-bottom: 2px solid gray;
         margin-top: 20px;
-        margin-right: 20px;
-        padding: 20px;
     } 
 
     .info h3{
@@ -565,21 +555,35 @@ footer img {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-
     }
 
+    .calidad{
+        font-size: 30px;
+    }
 
     .info .largo{
-        font-size: 8px;
+        font-size: 12px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .li{
+        font-size: 10px;
+        margin-left: 0px;
     }
 
-    .info li{
-        font-size: 10px;
+    .menu{
+        display: inline;
+    }
+
+    .info img{
+        display: none;
     }
 
     .calidad{
         font-size: 35px;
-
     }
 
     .inform{
@@ -597,8 +601,8 @@ footer img {
     }
 
     .menu{
-        display: inline;
-        align-items: center;
+        display: flex;
+        flex-direction: row-reverse;
     }
 
 
@@ -619,25 +623,10 @@ footer img {
         margin-right: 20px;
         width: 60%;
     }
-    
-}
 
-@media screen and (max-width:350px){
-
-   .menu{
-    border-bottom: 2px solid gray;
-   }
-
-
-    .li{
-        font-size: 10px;
+    .info li{
+        font-size: 15px;
     }
     
 }
 
-@media screen and (max-width:330px) {
-    .activa{
-        display: none;
-    }
-    
-}
