--- a/cliente/src/componentes/productos/productos.css
+++ b/cliente/src/componentes/productos/productos.css
@@ -28,15 +28,6 @@ nav img {
     padding: 12px;
 }
 
-.carnes {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #d3d3d3;
-    width: 100%;
-    height: 140px;
-}
 
 .carnes li {
     list-style: none;
@@ -63,17 +54,6 @@ nav img {
 
 
 
-
-.carnes{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(192, 192, 192);
-    ;
-    width: 100%;
-    height: 100%;
-}
 .carnes li{
     list-style:none ;
     display: flex;
@@ -98,7 +78,7 @@ nav img {
 /*productos */
 .carnes{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     background-color: #d3d3d3;
@@ -367,4 +347,13 @@ header {
   background-color: #333;
   transform: scale(1.03);
   border-radius: 0;
+}
+
+@media screen and (max-width:500px) {
+    .carnes{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        height: 380px;
+    }
 }
