--- a/cliente/src/componentes/conocenos/conocenos.css
+++ b/cliente/src/componentes/conocenos/conocenos.css
@@ -73,6 +73,8 @@ body {
 .uno{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .grid3 h2 {
@@ -121,7 +123,7 @@ body {
     text-align: center;
 }
 
-.grid4 h3 { max-width: none;
+.grid4 h3 { max-width: 70%;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -168,12 +170,6 @@ footer {
 
     .imagen_mision{
         display: none;
-    }
-
-    .grid4{
-        background-image: linear-gradient(rgba(128, 15, 15, 0.288), rgba(128, 15, 15, 0.288)), url('https://storage.lacapitalmdp.com/2019/02/DECARNESOMOS06-1024x683.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
     }
 
 
