--- a/cliente/src/componentes/conocenos/conocenos.css
+++ b/cliente/src/componentes/conocenos/conocenos.css
@@ -68,6 +68,8 @@ body {
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
+    align-items: center;
+    margin-top: 50px;
 }
 
 .uno{
@@ -100,19 +102,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 200px;
-    height: 320px;
+    width: 26%;
+    height: 26%;
 }
 
 
 .grid4{
     grid-column: 1/2;
-    grid-row: 4/5;
+    grid-row: 3/4;
     padding: 25px;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: row-reverse;
     justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .grid4 h2 {
@@ -123,13 +126,15 @@ body {
     text-align: center;
 }
 
-.grid4 h3 { max-width: 70%;
+.grid4 h3 {  
     display: flex;
     justify-content: center;
     text-align: center;
+    max-width: 750px;
     font-size: 25px;
     color: white;
     text-align: justify;
+    
 }
 
 
