--- a/cliente/src/componentes/encuesta/encuesta.css
+++ b/cliente/src/componentes/encuesta/encuesta.css
@@ -7,12 +7,13 @@ body {
 
 .caja_encuesta{
   width: 100%;
-  height: auto;
+  height: 81.6vh;
   padding: 50px;
   display: flex;
   flex-direction: column;
   background-color: black;
   align-items: center; 
+  justify-content: center;
 }
 
 .caja_encuesta h4 {
